src/gen/snapshots/mcp_forge__r#gen__tests__mcp_rs_matrix_basic.snap
---
source: src/gen/mod.rs
expression: code
---
use rmcp::{
    ServerHandler, ServiceExt,
    handler::server::{router::tool::ToolRouter, wrapper::Parameters},
    model::{ServerCapabilities, ServerInfo},
    schemars, tool, tool_handler, tool_router,
    transport::stdio,
};
use serde::Deserialize;

use crate::auth;
use crate::client::MatrixApiClient;
use crate::config::MatrixApiConfig;
use crate::format;

// -- MCP tool input types --
//
// Each struct maps to an operation from the API spec. Field descriptions
// are preserved for schemars -> MCP tool schema generation.

#[derive(Debug, Deserialize, schemars::JsonSchema)]
struct StaticPostBodyInput {
    #[schemars(description = "He said \"hi\"\\then left")]
    name: String,
}

#[derive(Debug, Deserialize, schemars::JsonSchema)]
struct StaticPostBodyNorespInput {
    #[schemars(description = "He said \"hi\"\\then left")]
    msg: String,
}

#[derive(Debug, Deserialize, schemars::JsonSchema)]
struct OnePathParamInput {
    x_id: String,
}

#[derive(Debug, Deserialize, schemars::JsonSchema)]
struct TwoPathParamsInput {
    a_id: String,
    b_id: String,
}

#[derive(Debug, Deserialize, schemars::JsonSchema)]
struct PathParamPutBodyInput {
    x_id: String,
    #[schemars(description = "He said \"hi\"\\then left")]
    name: String,
}

#[derive(Debug, Deserialize, schemars::JsonSchema)]
struct PathParamPutNorespInput {
    y_id: String,
    #[schemars(description = "He said \"hi\"\\then left")]
    name: String,
}

#[derive(Debug, Deserialize, schemars::JsonSchema)]
struct PathParamPatchBodyInput {
    x_id: String,
    #[schemars(description = "He said \"hi\"\\then left")]
    name: String,
}

#[derive(Debug, Deserialize, schemars::JsonSchema)]
struct PathParamPatchNorespInput {
    z_id: String,
    #[schemars(description = "He said \"hi\"\\then left")]
    name: String,
}

#[derive(Debug, Deserialize, schemars::JsonSchema)]
struct DeleteWithRespInput {
    x_id: String,
}

#[derive(Debug, Deserialize, schemars::JsonSchema)]
struct DeleteNoRespInput {
    y_id: String,
}

#[derive(Debug, Deserialize, schemars::JsonSchema)]
struct QueryRequiredInput {
    #[schemars(description = "He said \"hi\"\\then left")]
    limit: i64,
}

#[derive(Debug, Deserialize, schemars::JsonSchema)]
struct QueryOptionalInput {
    #[schemars(description = "He said \"hi\"\\then left")]
    cursor: Option<String>,
}

#[derive(Debug, Deserialize, schemars::JsonSchema)]
struct QueryOptionalThenRequiredInput {
    #[schemars(description = "He said \"hi\"\\then left")]
    status: Option<String>,
    #[schemars(description = "He said \"hi\"\\then left")]
    limit: i64,
}

#[derive(Debug, Deserialize, schemars::JsonSchema)]
struct QueryNonOptionNotRequiredInput {
    #[schemars(description = "He said \"hi\"\\then left")]
    page: Option<i64>,
}

#[derive(Debug, Deserialize, schemars::JsonSchema)]
struct PathAndQueryInput {
    u_id: String,
    #[schemars(description = "He said \"hi\"\\then left")]
    page: Option<i64>,
}

#[derive(Debug, Deserialize, schemars::JsonSchema)]
struct PathQueryAndBodyInput {
    u_id: String,
    #[schemars(description = "He said \"hi\"\\then left")]
    dry: bool,
    #[schemars(description = "He said \"hi\"\\then left")]
    name: String,
}

// -- MCP Server --

#[derive(Debug, Clone)]
struct MatrixApiMcp {
    client: MatrixApiClient,
    tool_router: ToolRouter<Self>,
}

#[tool_router]
impl MatrixApiMcp {
    fn new() -> Result<Self, String> {
        let config = MatrixApiConfig::load();
        let api_key = auth::resolve_api_key(None, &config).map_err(|e| e.to_string())?;
        let client =
            MatrixApiClient::new(&config.api_url, &api_key).map_err(|e| e.to_string())?;

        Ok(Self {
            client,
            tool_router: Self::tool_router(),
        })
    }

    #[tool(description = "static_get summary")]
    async fn static_get(&self, Parameters(_): Parameters<serde_json::Value>) -> String {
        match self.client.static_get().await {
            Ok(result) => format::format_static_get(&result),
            Err(e) => format!("Error: {e}"),
        }
    }

    #[tool(description = "static_get_empty summary")]
    async fn static_get_empty(&self, Parameters(_): Parameters<serde_json::Value>) -> String {
        match self.client.static_get_empty().await {
            Ok(result) => format::format_static_get_empty(&result),
            Err(e) => format!("Error: {e}"),
        }
    }

    #[tool(description = "static_post_nobody summary")]
    async fn static_post_nobody(&self, Parameters(_): Parameters<serde_json::Value>) -> String {
        match self.client.static_post_nobody().await {
            Ok(result) => format::format_static_post_nobody(&result),
            Err(e) => format!("Error: {e}"),
        }
    }

    #[tool(description = "static_post_nobody_noresp summary")]
    async fn static_post_nobody_noresp(&self, Parameters(_): Parameters<serde_json::Value>) -> String {
        match self.client.static_post_nobody_noresp().await {
            Ok(result) => format::format_static_post_nobody_noresp(&result),
            Err(e) => format!("Error: {e}"),
        }
    }

    #[tool(description = "static_post_body summary")]
    async fn static_post_body(&self, Parameters(input): Parameters<StaticPostBodyInput>) -> String {
        let req = crate::api::types::MkX {
            name: input.name.clone(),
        };
        match self.client.static_post_body(&req).await {
            Ok(result) => format::format_static_post_body(&result),
            Err(e) => format!("Error: {e}"),
        }
    }

    #[tool(description = "static_post_body_noresp summary")]
    async fn static_post_body_noresp(&self, Parameters(input): Parameters<StaticPostBodyNorespInput>) -> String {
        let req = crate::api::types::Notify {
            msg: input.msg.clone(),
        };
        match self.client.static_post_body_noresp(&req).await {
            Ok(result) => format::format_static_post_body_noresp(&result),
            Err(e) => format!("Error: {e}"),
        }
    }

    #[tool(description = "one_path_param summary")]
    async fn one_path_param(&self, Parameters(input): Parameters<OnePathParamInput>) -> String {
        match self.client.one_path_param(&input.x_id).await {
            Ok(result) => format::format_one_path_param(&result),
            Err(e) => format!("Error: {e}"),
        }
    }

    #[tool(description = "two_path_params summary")]
    async fn two_path_params(&self, Parameters(input): Parameters<TwoPathParamsInput>) -> String {
        match self.client.two_path_params(&input.a_id, &input.b_id).await {
            Ok(result) => format::format_two_path_params(&result),
            Err(e) => format!("Error: {e}"),
        }
    }

    #[tool(description = "path_param_put_body summary")]
    async fn path_param_put_body(&self, Parameters(input): Parameters<PathParamPutBodyInput>) -> String {
        let req = crate::api::types::UpX {
            name: input.name.clone(),
        };
        match self.client.path_param_put_body(&input.x_id, &req).await {
            Ok(result) => format::format_path_param_put_body(&result),
            Err(e) => format!("Error: {e}"),
        }
    }

    #[tool(description = "path_param_put_noresp summary")]
    async fn path_param_put_noresp(&self, Parameters(input): Parameters<PathParamPutNorespInput>) -> String {
        let req = crate::api::types::UpY {
            name: input.name.clone(),
        };
        match self.client.path_param_put_noresp(&input.y_id, &req).await {
            Ok(result) => format::format_path_param_put_noresp(&result),
            Err(e) => format!("Error: {e}"),
        }
    }

    #[tool(description = "path_param_patch_body summary")]
    async fn path_param_patch_body(&self, Parameters(input): Parameters<PathParamPatchBodyInput>) -> String {
        let req = crate::api::types::PatchX {
            name: input.name.clone(),
        };
        match self.client.path_param_patch_body(&input.x_id, &req).await {
            Ok(result) => format::format_path_param_patch_body(&result),
            Err(e) => format!("Error: {e}"),
        }
    }

    #[tool(description = "path_param_patch_noresp summary")]
    async fn path_param_patch_noresp(&self, Parameters(input): Parameters<PathParamPatchNorespInput>) -> String {
        let req = crate::api::types::PatchZ {
            name: input.name.clone(),
        };
        match self.client.path_param_patch_noresp(&input.z_id, &req).await {
            Ok(result) => format::format_path_param_patch_noresp(&result),
            Err(e) => format!("Error: {e}"),
        }
    }

    #[tool(description = "delete_with_resp summary")]
    async fn delete_with_resp(&self, Parameters(input): Parameters<DeleteWithRespInput>) -> String {
        match self.client.delete_with_resp(&input.x_id).await {
            Ok(_) => format!("Success: DELETE /x/{xId}"),
            Err(e) => format!("Error: {e}"),
        }
    }

    #[tool(description = "delete_no_resp summary")]
    async fn delete_no_resp(&self, Parameters(input): Parameters<DeleteNoRespInput>) -> String {
        match self.client.delete_no_resp(&input.y_id).await {
            Ok(_) => format!("Success: DELETE /y/{yId}"),
            Err(e) => format!("Error: {e}"),
        }
    }

    #[tool(description = "stop_thing summary")]
    async fn stop_thing(&self, Parameters(_): Parameters<serde_json::Value>) -> String {
        match self.client.stop_thing().await {
            Ok(_) => format!("Success: POST /stop"),
            Err(e) => format!("Error: {e}"),
        }
    }

    #[tool(description = "query_required summary")]
    async fn query_required(&self, Parameters(input): Parameters<QueryRequiredInput>) -> String {
        match self.client.query_required(input.limit).await {
            Ok(result) => format::format_query_required(&result),
            Err(e) => format!("Error: {e}"),
        }
    }

    #[tool(description = "query_optional summary")]
    async fn query_optional(&self, Parameters(input): Parameters<QueryOptionalInput>) -> String {
        match self.client.query_optional(input.cursor.as_deref()).await {
            Ok(result) => format::format_query_optional(&result),
            Err(e) => format!("Error: {e}"),
        }
    }

    #[tool(description = "query_optional_then_required summary")]
    async fn query_optional_then_required(&self, Parameters(input): Parameters<QueryOptionalThenRequiredInput>) -> String {
        match self.client.query_optional_then_required(input.status.as_deref(), input.limit).await {
            Ok(result) => format::format_query_optional_then_required(&result),
            Err(e) => format!("Error: {e}"),
        }
    }

    #[tool(description = "query_non_option_not_required summary")]
    async fn query_non_option_not_required(&self, Parameters(input): Parameters<QueryNonOptionNotRequiredInput>) -> String {
        match self.client.query_non_option_not_required(input.page).await {
            Ok(result) => format::format_query_non_option_not_required(&result),
            Err(e) => format!("Error: {e}"),
        }
    }

    #[tool(description = "path_and_query summary")]
    async fn path_and_query(&self, Parameters(input): Parameters<PathAndQueryInput>) -> String {
        match self.client.path_and_query(&input.u_id, input.page.as_deref()).await {
            Ok(result) => format::format_path_and_query(&result),
            Err(e) => format!("Error: {e}"),
        }
    }

    #[tool(description = "path_query_and_body summary")]
    async fn path_query_and_body(&self, Parameters(input): Parameters<PathQueryAndBodyInput>) -> String {
        let req = crate::api::types::MkR {
            name: input.name.clone(),
        };
        match self.client.path_query_and_body(&input.u_id, input.dry, &req).await {
            Ok(result) => format::format_path_query_and_body(&result),
            Err(e) => format!("Error: {e}"),
        }
    }

}

#[tool_handler]
impl ServerHandler for MatrixApiMcp {
    fn get_info(&self) -> ServerInfo {
        ServerInfo {
            instructions: Some(
                "He said \"hi\"\\then left"
                    .into(),
            ),
            capabilities: ServerCapabilities::builder().enable_tools().build(),
            ..Default::default()
        }
    }
}

// -- Entry point --

pub async fn run() -> std::result::Result<(), Box<dyn std::error::Error>> {
    let server = MatrixApiMcp::new()?.serve(stdio()).await?;
    server.waiting().await?;
    Ok(())
}
