src/gen/snapshots/mcp_forge__r#gen__tests__src_auth_rs.snap
---
source: src/gen/mod.rs
expression: content
---
use crate::config::PetStoreConfig;
use crate::error::{PetStoreError, Result};
use std::path::PathBuf;

/// Resolve the API key from (in priority order):
/// 1. Explicit CLI flag value
/// 2. PET_STORE_API_KEY environment variable
/// 3. Contents of the configured api_key_file
pub fn resolve_api_key(explicit: Option<&str>, config: &PetStoreConfig) -> Result<String> {
    // 1. Explicit flag
    if let Some(key) = explicit {
        return Ok(key.to_string());
    }

    // 2. Environment variable
    if let Ok(key) = std::env::var("PET_STORE_API_KEY") {
        if !key.is_empty() {
            return Ok(key);
        }
    }

    // 3. File
    let path = expand_tilde(&config.api_key_file);
    match std::fs::read_to_string(&path) {
        Ok(content) => {
            let key = content.trim().to_string();
            if key.is_empty() {
                Err(PetStoreError::NoApiKey { path })
            } else {
                Ok(key)
            }
        }
        Err(_) => Err(PetStoreError::NoApiKey { path }),
    }
}

fn expand_tilde(path: &PathBuf) -> PathBuf {
    let s = path.to_string_lossy();
    if let Some(rest) = s.strip_prefix("~/") {
        if let Ok(home) = std::env::var("HOME") {
            return PathBuf::from(home).join(rest);
        }
    }
    path.clone()
}
