src/gen/snapshots/mcp_forge__r#gen__tests__src_config_rs.snap
---
source: src/gen/mod.rs
expression: content
---
use serde::Deserialize;
use std::path::PathBuf;

#[derive(Debug, Deserialize)]
#[serde(default)]
pub struct PetStoreConfig {
    pub api_url: String,
    pub api_key_file: PathBuf,
}

impl Default for PetStoreConfig {
    fn default() -> Self {
        Self {
            api_url: "https://api.petstore.example.com/v2".into(),
            // okiba resolves $XDG_CONFIG_HOME then ~/.config, and IGNORES a
            // relative override per spec rather than joining it. This used to
            // be PathBuf::from($HOME) with a "/tmp" fallback, so an empty or
            // relative HOME put the API KEY FILE in the process's cwd.
            api_key_file: okiba::Okiba::for_app("pet_store").path(
                okiba::Tier::Config,
                "api-key",
            ),
        }
    }
}

impl PetStoreConfig {
    pub fn load() -> Self {
        // Priority:
        // 1. PET_STORE_CONFIG env (set by Nix HM module for MCP server context)
        // 2. XDG_CONFIG_HOME/pet_store/pet_store.yaml
        // 3. ~/.config/pet_store/pet_store.yaml
        // 4. Defaults

        // Every candidate is ABSOLUTE or it is not a candidate. All three arms
        // used to take their variable verbatim, so a relative $XDG_CONFIG_HOME
        // or $HOME made a candidate resolve against the cwd — a server started
        // inside a repo could load configuration out of that repo.
        let candidates: Vec<PathBuf> = [
            // Nix module sets this for MCP server processes that lack user env
            std::env::var("PET_STORE_CONFIG")
                .ok()
                .map(PathBuf::from)
                .filter(|p| p.is_absolute()),
            // One okiba call for what were two arms: $XDG_CONFIG_HOME then
            // ~/.config, same resulting path, absolute by construction.
            Some(okiba::Okiba::for_app("pet_store").path(
                okiba::Tier::Config,
                "pet_store.yaml",
            )),
        ]
        .into_iter()
        .flatten()
        .collect();

        for candidate in &candidates {
            if candidate.exists() {
                if let Ok(content) = std::fs::read_to_string(candidate) {
                    match serde_yaml_ng::from_str::<Self>(&content) {
                        Ok(config) => return config,
                        Err(e) => {
                            tracing::warn!("failed to parse {}: {e}", candidate.display());
                        }
                    }
                }
            }
        }

        Self::default()
    }
}
