src/gen/snapshots/mcp_forge__r#gen__tests__types_rs.snap
---
source: src/gen/mod.rs
expression: code
---
use serde::{Deserialize, Serialize};

/// A pet in the store.
#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct Pet {
    pub id: i64,
    pub name: String,
    #[serde(default, skip_serializing_if = "Option::is_none")]
    pub tag: Option<String>,
    #[serde(default, skip_serializing_if = "Option::is_none")]
    pub status: Option<PetStatus>,
    #[serde(flatten)]
    pub extra: serde_json::Value,
}

#[derive(Debug, Clone, PartialEq, Eq, Serialize, Deserialize)]
#[serde(rename_all = "lowercase")]
pub enum PetStatus {
    Available,
    Pending,
    Sold,
}

impl std::fmt::Display for PetStatus {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        match self {
            Self::Available => write!(f, "available"),
            Self::Pending => write!(f, "pending"),
            Self::Sold => write!(f, "sold"),
        }
    }
}

#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct CreatePetRequest {
    /// The pet name
    pub name: String,
    #[serde(default, skip_serializing_if = "Option::is_none")]
    pub tag: Option<String>,
}
